--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap');
+
 :root {
-    font-size: 10px;
+    --DarkBlue: hsl(240, 37.9%, 20.2%);
+    --GrayishBlue: hsl(240, 17.6%, 76.7%);
 }
 
 *, *::before, *::after {
@@ -15,6 +18,11 @@
 
 body {
     background-color: white;
+    font-family: 'Inter', sans-serif;
+    font-size: 32px;
+    font-weight: 300;
+    line-height: 1.375;
+    color: var(--DarkBlue);
 }
 
 main {
@@ -26,6 +34,29 @@ main {
     display: flex;
     margin: auto;
 }
+
+.right_col {
+    display: flex;
+    flex-basis: 44%;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 165px;
+}
+
+cite {
+    margin-top: 55px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.9;
+    color: var(--GrayishBlue);
+}
+
+em {
+    font-weight: 700;
+    color: var(--DarkBlue);
+}
+
+
 
 .second_slide {
     display: none;
