--- a/css/style.css
+++ b/css/style.css
@@ -23,26 +23,27 @@ body {
     font-weight: 300;
     line-height: 1.375;
     color: var(--DarkBlue);
-}
-
-main {
-    display: flex;
     height: 100vh;
 }
 
-.slide {
+
+.flex_container {
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slide {
     margin: auto;
 }
 
 .left_col {
     z-index: 1;
     background-color: transparent;
-    background: url('../images/pattern-curve.svg') no-repeat bottom;
-    display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: flex-start;
     margin-right: -150px;
+    background: url('../images/pattern-curve.svg') no-repeat bottom left;
 }
 
 .quote {
@@ -61,6 +62,7 @@ cite {
     font-size: 20px;
     line-height: 1.9;
     color: var(--GrayishBlue);
+    margin-bottom: 200px;
 }
 
 em {
@@ -70,18 +72,19 @@ em {
 
 
 .right_col {
-    display: flex;
     flex-direction: column;
     background: url('../images/pattern-bg.svg') no-repeat center;
-    justify-content: center;
-    align-items: center;
     width: 694px;
     height: 1040px;
 }
 
+.shadow {
+    box-shadow: 0 15px 20px -10px hsla(240, 51.7%, 29.2%, 0.1);
+}
+
 .portrait {
     border-radius: 5px;
-    box-shadow: 0 15px 20px -10px hsla(240, 51.7%, 29.2%, 0.1);
+    
 }
 
 .button-container {
@@ -89,12 +92,9 @@ em {
     height: 56px;
     width: 112px;
     border-radius: 28px;
-    box-shadow: 0 15px 20px -10px hsla(240, 51.7%, 29.2%, 0.1);
     margin-top: -35px;
     margin-right: 300px;
-    display: flex;
     justify-content: space-between;
-    align-items: center;
 }
 
 button {
