--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,15 @@
     z-index: 0;
     box-sizing: border-box;
 }
+
+body {
+    background-color: white;
+    height: 100vh;
+    background: url('../images/pattern-curve.svg') no-repeat bottom left;
+}
+
+.flex {
+    display: flex;
+    align-items: center;
+    align-content: center;
+}
