--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,8 @@ em {
     height: 56px;
     border-radius: 28px;
     justify-content: space-evenly;
+    margin-top: -25px;
+    margin-right: 300px;
 }
 
 button {
